feat: add actions

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 天才小熊猫
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Dapeng
+language: zh-CN
 timezone: ''
 
 # URL
